--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -71,7 +71,7 @@ advantages:
 				<div class="bz-grid-in">
 					<div class="bz-grid-col bz-grid-col-3 bz-grid-col-sm-2">
 						<div class="bz-grid-row">
-							<a href="#" class="new__item">
+							<a class="new__item" href="#">
 								<picture>
 									<source media="(max-width: 480px)" srcset="img/new/mobile/1.jpg">
 									<source media="(max-width: 768px)" srcset="img/new/tablet/1.jpg">
@@ -82,7 +82,7 @@ advantages:
 					</div>
 					<div class="bz-grid-col bz-grid-col-3 bz-grid-col-sm-2">
 						<div class="bz-grid-row bz-grid-row-3">
-							<a href="#" class="new__item">
+							<a class="new__item" href="#">
 								<picture>
 									<source media="(max-width: 480px)" srcset="img/new/mobile/3.jpg">
 									<source media="(max-width: 768px)" srcset="img/new/tablet/3.jpg">
@@ -91,7 +91,7 @@ advantages:
 							</a>
 						</div>
 						<div class="bz-grid-row bz-grid-row-2">
-							<a href="#" class="new__item">
+							<a class="new__item" href="#">
 								<picture>
 									<source media="(max-width: 480px)" srcset="img/new/mobile/2.jpg">
 									<source media="(max-width: 768px)" srcset="img/new/tablet/2.jpg">
@@ -102,7 +102,7 @@ advantages:
 					</div>
 					<div class="bz-grid-col bz-grid-col-3 bz-grid-col-sm-12 bz-grid-col-sm-reverse">
 						<div class="bz-grid-row bz-grid-row-2">
-							<a href="#" class="new__item">
+							<a class="new__item" href="#">
 								<picture>
 									<source media="(max-width: 480px)" srcset="img/new/mobile/2.jpg">
 									<source media="(max-width: 768px)" srcset="img/new/tablet/2.jpg">
@@ -111,7 +111,7 @@ advantages:
 							</a>
 						</div>
 						<div class="bz-grid-row bz-grid-row-3">
-							<a href="#" class="new__item">
+							<a class="new__item" href="#">
 								<picture>
 									<source media="(max-width: 480px)" srcset="img/new/mobile/3.jpg">
 									<source media="(max-width: 768px)" srcset="img/new/tablet/3.1.jpg">
@@ -127,7 +127,7 @@ advantages:
 				<div class="bz-grid-in">
 					<div class="bz-grid-col bz-grid-col-3">
 						<div class="bz-grid-row bz-grid-row-6">
-							<a href="#" class="new__item">
+							<a class="new__item" href="#">
 								<picture>
 									<source media="(max-width: 480px)" srcset="img/new/mobile/5.jpg">
 									<source media="(max-width: 768px)" srcset="img/new/tablet/5.jpg">
@@ -136,7 +136,7 @@ advantages:
 							</a>
 						</div>
 						<div class="bz-grid-row bz-grid-row-6">
-							<a href="#" class="new__item">
+							<a class="new__item" href="#">
 								<picture>
 									<source media="(max-width: 480px)" srcset="img/new/mobile/5.jpg">
 									<source media="(max-width: 768px)" srcset="img/new/tablet/5.jpg">
@@ -147,7 +147,7 @@ advantages:
 					</div>
 					<div class="bz-grid-col bz-grid-col-2">
 						<div class="bz-grid-row bz-grid-row">
-							<a href="#" class="new__item">
+							<a class="new__item" href="#">
 								<picture>
 									<source media="(max-width: 480px)" srcset="img/new/mobile/4.jpg">
 									<source media="(max-width: 768px)" srcset="img/new/tablet/4.jpg">
