--- a/src/templates/partials/components/_catalog-filter.html
+++ b/src/templates/partials/components/_catalog-filter.html
@@ -31,7 +31,7 @@
 
 			<div class="catalog-filter__item js-catalog-filter-item accordeon__item">
 				<div class="catalog-filter__subtitle accordeon__title">Плотность ткани</div>
-				<div class="catalog-filter__content accordeon__content js-scroll" style="display: none;">
+				<div class="catalog-filter__content accordeon__content js-scroll">
 					<div class="catalog-filter__subitem">
 						{{ item.checkbox('110', 'checkbox--transform') }}
 					</div>
@@ -52,7 +52,7 @@
 
 			<div class="catalog-filter__item js-catalog-filter-item accordeon__item">
 				<div class="catalog-filter__subtitle accordeon__title">Цена</div>
-				<div class="catalog-filter__content accordeon__content js-scroll" style="display: none;">
+				<div class="catalog-filter__content accordeon__content js-scroll">
 					<div class="catalog-filter__item_price js-catalog-filter-item-price">
 						<div class="catalog-filter__range range">
 							<div class="range__slider" id="js-catalog-filter-slider" data-start="350" data-end="680"></div>
@@ -73,7 +73,7 @@
 
 			<div class="catalog-filter__item js-catalog-filter-item accordeon__item">
 				<div class="catalog-filter__subtitle accordeon__title">Производитель</div>
-				<div class="catalog-filter__content accordeon__content js-scroll" style="display: none;">
+				<div class="catalog-filter__content accordeon__content js-scroll">
 					<div class="catalog-filter__subitem">
 						{{ item.checkbox('Турция', 'checkbox--transform') }}
 					</div>
