--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -47,9 +47,19 @@ body{
 .wrapper {
 	min-height: 100vh;
 	@extend %flexColumn;
-}//.wrapper 
+}//.wrapper
 
-.main {flex: 1;}
+.main {
+	flex: 1;
+	&.rules {
+		.h1{
+			margin: 40px 0;
+			@include respond-to(xs) {
+				margin: 20px 0;
+			}
+		}
+	}
+}
 
 .container {@include container;}
 
@@ -196,7 +206,7 @@ body{
 					content: $icon;
 				}
 			}
-		}		
+		}
 	}//.social__link
 }//.social
 
@@ -266,7 +276,7 @@ body{
 				line-height: 1;
 			}
 		}
-		
+
 		&.is-active{
 			.pagination__link{
 				color: #fff;
@@ -288,7 +298,7 @@ body{
 		}
 	}//.pagination__link
 
-	&__icon{}//.pagination__icon	
+	&__icon{}//.pagination__icon
 }//pagination
 
 .range {
@@ -309,7 +319,7 @@ body{
 			font-size: 14px;
 			color: $color-text;
 		}
-		i{			
+		i{
 			font-size: 13px;
 			color: $gray--light;
 		}
@@ -372,9 +382,9 @@ body{
 			height: 55px;
 			margin-bottom: 10px;
 			border: 1px solid $gray--dark;
-			border-radius: 50%;	
+			border-radius: 50%;
 			@extend %flexCenter;
-			justify-content: center;				
+			justify-content: center;
 		}
 	}//.tab__icon
 
