--- a/src/templates/catalog.html
+++ b/src/templates/catalog.html
@@ -25,26 +25,23 @@ changer:
 
 			{% include "partials/components/_catalog-filter.html" %}
 
-			<!-- begin catalog-filter__btn -->
-			<button class="catalog-filter__btn catalog-filter__btn--show js-catalog-filter--show">
-				{{mixin.icon('filter-btn')}}
-			</button><!-- end catalog-filter__btn -->
-
 			<!-- begin catalog-content -->
-			<div class="catalog-content catalog__content">
+			<div class="catalog-content catalog__content stiky-content">
+
 				<!-- begin catalog__top-line -->
 				<div class="catalog__top-line">
 					 <div class="catalog__title">
 					 	<a class="catalog__back" href="#"><i class="far fa-angle-left"></i></a>
-					 	<h1 class="h1" itemprop="headline">Атлас</h1>
+					 	<h1 class="h1" itemprop="headline">Остатки тканей в балаково</h1>
 					 	<span class="catalog__count">350 товаров на складе</span>
 					 </div>
 					<div class="catalog__sorting sorting bz-select--dark">
 						<span class="sorting__title">Сортировать по:</span>
-						<select class="js-select no-search">
-							<option value="По возрастанию цены">По возрастанию цены</option>
-							<option value="По убыванию цены">По убыванию цены</option>
-							<option value="Рейтинг агенств">В начале новинки</option>
+						<select class="js-select select-with-icon">
+							<option value="По умолчанию" data-image="default">По умолчанию</option>
+							<option value="По возрастанию цены" data-image="top">По возрастанию цены</option>
+							<option value="По убыванию цены" data-image="down">По убыванию цены</option>
+							<option value="В начале новинки" data-image="new">В начале новинки</option>
 						</select>
 					</div>
 				</div><!-- end catalog__top-line -->
@@ -78,34 +75,6 @@ changer:
 					<button class="button button--transparent button--muted">Сбросить фильтр</button>
 				</div><!-- end catalog-content__empty -->
 
-				<!-- begin catalog-content__btn -->
-				<button class="button button--transparent button--accent catalog-content__btn">Показать еще</button><!-- end catalog-content__btn -->
-
-				<!-- begin pagination -->
-				<div class="pagination">
-					<ul class="pagination__list">
-						<li class="pagination__item">
-							<a class="pagination__link" href="#">
-								<i class="fal fa-angle-left pagination__icon"></i>
-							</a>
-						</li>
-						<li class="pagination__item">
-							<a class="pagination__link" href="#">1</a>
-						</li>
-						<li class="pagination__item is-active">
-							<a class="pagination__link" href="#">2</a>
-						</li>
-						<li class="pagination__item">
-							<a class="pagination__link" href="#">3</a>
-						</li>
-						<li class="pagination__item">
-							<a class="pagination__link" href="#">
-								<i class="fal fa-angle-right pagination__icon"></i>
-							</a>
-						</li>
-					</ul>
-				</div><!-- end pagination -->
-
 				<!-- begin catalog-content__preloader -->
 				<div class="catalog-content__preloader preloader" style="display: none;">
 					<div class="preloader__inner"></div>
@@ -113,6 +82,39 @@ changer:
 			</div><!-- end catalog-content -->
 
 		</div><!-- end catalog__wrap -->
+
+		<!-- begin catalog-filter__btn -->
+		<button class="catalog-filter__btn catalog-filter__btn--show js-catalog-filter--show">
+			{{mixin.icon('filter-btn')}}
+		</button><!-- end catalog-filter__btn -->
+
+		<!-- begin catalog-content__btn -->
+		<button class="button button--transparent button--accent catalog-content__btn">Показать еще</button><!-- end catalog-content__btn -->
+
+		<!-- begin pagination -->
+		<div class="pagination">
+			<ul class="pagination__list">
+				<li class="pagination__item">
+					<a class="pagination__link" href="#">
+						<i class="fal fa-angle-left pagination__icon"></i>
+					</a>
+				</li>
+				<li class="pagination__item">
+					<a class="pagination__link" href="#">1</a>
+				</li>
+				<li class="pagination__item is-active">
+					<a class="pagination__link" href="#">2</a>
+				</li>
+				<li class="pagination__item">
+					<a class="pagination__link" href="#">3</a>
+				</li>
+				<li class="pagination__item">
+					<a class="pagination__link" href="#">
+						<i class="fal fa-angle-right pagination__icon"></i>
+					</a>
+				</li>
+			</ul>
+		</div><!-- end pagination -->
 
 		<!-- begin seoblock -->
 		<section class="seoblock">
