--- a/src/templates/partials/components/_catalog-filter.html
+++ b/src/templates/partials/components/_catalog-filter.html
@@ -1,6 +1,6 @@
 <!-- begin catalog-filter -->
-<div class="catalog-filter catalog__filter js-catalog-filter">
-	<div class="catalog-filter__in">
+<div class="catalog-filter catalog__filter js-catalog-filter js-stiky">
+	<div class="catalog-filter__in stiky__inner">
 		<div class="catalog-filter__header">
 			<div class="catalog-filter__title">Фильтр</div>
 			{{item.btn('Сбросить', 'button button--link')}}
