--- a/src/templates/card.html
+++ b/src/templates/card.html
@@ -288,7 +288,7 @@ title: Атлас дюпон «izumrud»
 		</div><!-- end card__colors -->
 
 		<div class="button-box">
-			<a href="#" class="button button--transparent button--info card__btn--back">Вернуться в каталог</a>
+			<a href="#" class="button button--transparent button--accent card__btn--back">Вернуться в каталог</a>
 		</div>
 
 	</div>
