--- a/src/templates/partials/_items.html
+++ b/src/templates/partials/_items.html
@@ -93,33 +93,34 @@
 		<button class="button-icon button-icon--fav js-button-icon--fav product-item__fav"></button>
 	</div>
 
-	<div class="product-slider js-product-slider">
-		<ul class="product-slider__list js-product-slider-list">
+	<!-- begin product-slider -->
+	<div class="product-slider">
+		<ul class="product-slider__list">
 
-			<li class="product-slider__item js-product-slider-item ">
+			<li class="product-slider__item">
 			   <div class="product-slider__image" style="background-image: url('img/products/atlas/1.png');"></div>
 			</li>
 
-			<li class="product-slider__item js-product-slider-item ">
+			<li class="product-slider__item">
 			   <div class="product-slider__image" style="background-image: url('img/products/atlas/2.png');"></div>
 			</li>
 
-			<li class="product-slider__item js-product-slider-item ">
+			<li class="product-slider__item">
 			   <div class="product-slider__image" data-srcpath="" style="background-image: url('img/products/atlas/3.png');"></div>
 			</li>
 
-			<li class="product-slider__item js-product-slider-item ">
+			<li class="product-slider__item">
 			   <div class="product-slider__image" data-srcpath="" style="background-image: url('img/products/atlas/4.png');"></div>
 			</li>
 
-			<li class="product-slider__item product-slider__item--last js-product-slider-item js-product-slider-item--last">
+			<li class="product-slider__item product-slider__item--last">
 				<div class="product-slider__image" data-srcpath="" style="background-image: url('img/products/atlas/3.png');"></div>
-				<div class="product-slider__more js-product-slider-more">
+				<div class="product-slider__more">
 					Ещё<br>5 цветов
 				</div>
 			</li>
 		</ul>
-	</div>
+	</div><!-- end product-slider -->
 
 	<div class="product-item__desc">
 		<div class="product-item__box">
