--- a/src/templates/partials/components/_catalog-filter.html
+++ b/src/templates/partials/components/_catalog-filter.html
@@ -26,6 +26,22 @@
 						{{ item.checkbox('зеленый', 'checkbox--transform js-checkbox') }}
 						<span class="catalog-filter__color" data-filter-color="#233e23"></span>
 					</div>
+					<div class="catalog-filter__subitem">
+						{{ item.checkbox('белый', 'checkbox--transform js-checkbox') }}
+						<span class="catalog-filter__color" data-filter-color="#fff"></span>
+					</div>
+					<div class="catalog-filter__subitem">
+						{{ item.checkbox('кремовый', 'checkbox--transform js-checkbox') }}
+						<span class="catalog-filter__color" data-filter-color="#e4d8cb"></span>
+					</div>
+					<div class="catalog-filter__subitem">
+						{{ item.checkbox('синий', 'checkbox--transform js-checkbox') }}
+						<span class="catalog-filter__color" data-filter-color="#46358d"></span>
+					</div>
+					<div class="catalog-filter__subitem">
+						{{ item.checkbox('зеленый', 'checkbox--transform js-checkbox') }}
+						<span class="catalog-filter__color" data-filter-color="#233e23"></span>
+					</div>
 				</div>
 			</div>
 
@@ -59,12 +75,12 @@
 						</div>
 						<div class="range__diapazon">
 							<div class="range__from">
-								<span id="jsPriceStart"></span>
-								<i class="fa fa-rub"></i>
+								<input id="jsPriceStart">
+								<i class="fal-rub"></i>
 							</div>
 							<div class="range__to">
-								<span id="jsPriceEnd"></span>
-								<i class="fa fa-rub"></i>
+								<input id="jsPriceEnd">
+								<i class="fal-rub"></i>
 							</div>
 						</div>
 					</div>
