--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -36,7 +36,7 @@ h1,.h1 {
 		line-height: 1.125em;
 	}
 	@include max-screen(480) {
-		font-size: 24px;		
+		font-size: 24px;
 	}
 }
 h2,.h2 {
@@ -69,11 +69,12 @@ h3,.h3 {
 }
 h4,.h4,h5,.h5, h6,.h6{
 	font-family: $f2-bold;
-	font-weight: 600;	
+	letter-spacing: 1px;
+	font-weight: 500;
 	text-transform: uppercase;
 	margin-bottom: $base-indent;
 	@include max-screen(768) {
-		line-height: 1.11111111em;	
+		line-height: 1.11111111em;
 	}
 }
 h4,.h4{
@@ -82,7 +83,7 @@ h4,.h4{
 	line-height: 1.22222222em;
 
 }
-h5,.h5, h6,.h6 {	
+h5,.h5, h6,.h6 {
 	font-size: 12px;
 	letter-spacing: 0.24px;
 }
